--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -5,17 +5,12 @@ spring.jpa.show-sql=true
 spring.datasource.url = jdbc:mysql://localhost:3306/ppmtool
 
 spring.datasource.username= root
-spring.datasource.password=Shreya@21
+spring.datasource.password=password
 
 
 
 #Using the right database platform is extremly important on Spring Boot 2.0
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
-
-
-
+,
 
 #CONFLICTS WITH HEROKU from local host
 
